Generate PDFs for students without submissions
If students have a grade in the CSV, but no corresponding Canvas
submission (eg, they submitted manually by email late or such), then
they will still have a PDF generated. This PDF will be named as
"MISSING_CANVAS_SUBMISSION_<their_name>.pdf".

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@ node_modules
 #want to leave an empty folder 'canvas_submissions' in input to maintain structure
 input/*
 !input/canvas_submissions
+input/canvas_submissions/*
+!input/canvas_submissions/.gitignore
 output/*
+!output/.gitignore
 
